maj mise en forme et traductions (non effectif)

--- a/translations/login.fr.yaml
+++ b/translations/login.fr.yaml
@@ -1,1 +1,3 @@
-Email could not be found.: Le mail ne peut pas être trouvé
+Email could not be found.: Le mail est introuvable.
+Please enter an email address.: Ceci n'est pas une adresse email valide.
+Please fill in this field.: Ce champs doit être rempli.
